Fix dispatchDecompressionForType() post merge

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0, 8.0.0-rc5
    • Affects Version/s: 8.1.0-rc0
    • Component/s: None
    • None
    • Query Integration
    • Fully Compatible
    • ALL
    • v8.0
    • QI 2024-05-13
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      SERVER-85178 merged without conflicts but the result wasn't quite correct for fixes to BinData. This lambda needs to be updated to only update state for the last buffer:

      https://github.com/10gen/mongo/blob/2dc9ff07c8abcac776d402d2dabdb3470d9e471c/src/mongo/bson/util/bsoncolumn_interleaved.h#L950-L953

      I don't believe this is a bug that can actually be hit from SBE, but it could affect things moving forward as SBE supports pushing down more paths.

            Assignee:
            Chris Wolff
            Reporter:
            Chris Wolff
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: