SERVER-90111 Fix up dispatchDecompressionForType() (#21835)

GitOrigin-RevId: ff2297a42c6f52fe3320f6f18c0c8cf7ca30ca34